feat: add spawn protection for players and fix bug that made the player lose all their lives when hit by an explosion